# bitter

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: bitter.yml
src/: accounting.rs  bencoding.rs  download.rs  lib.rs  main.rs  metainfo.rs  peer.rs  protocol.rs  tracker.rs  utils.rs
tests/: peer_handler_test.rs
tests/testfiles/: art1.png.torrent  art2.jpg.torrent
