[package]
name = "bitter"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
needless_late_init = "allow"

[dependencies]
bit-vec = "0.8.0"
bytes = "1.11.0"
clap = { version = "4.5.35", features = ["derive"] }
rand = "0.9.0"
reqwest = "0.12.15"
serde = { version = "1.0.193", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tempdir = "0.3.7"
